--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <form class="max-w-sm mx-auto" method="post">
+  <form class="max-w-sm mx-auto mt-12 mb-12 bg-white p-12 rounded-xl shadow-xl font-mono" method="post">
     {% csrf_token %}
-      <div class="mb-5">
+      <div class="mb-5 pt-5">
         {{ form }}
       </div>
-      <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+      <button type="submit" class="text-white bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-800 font-medium rounded-lg text-sm sm:w-full sm:justify-end w-auto px-5 py-2.5 text-center dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800 hover:shadow-2xl">Submit</button>
   </form>
 {% endblock %}
