--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -87,8 +87,13 @@
             <div class="hidden md:flex md:items-center md:w-auto w-full order-3 md:order-1" id="menu">
                 <nav>
                     <ul class="md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
-                        <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="#">Food</a></li>
-                        <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="#">About</a></li>
+                      {% if request.user.is_anonymous %}
+                      {% url 'login' as login %}
+                        <li><a {% if not login in request.path %} class="inline-block no-underline hover:text-black hover:underline py-2 px-4" {% else %} class="text-red-500 font-bold hover:text-red-800" {% endif %} href="{{ login }}">Login</a></li>
+                        <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="">Sign Up</a></li>
+                      {% else %}
+                      <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="">Log Out</a></li>
+                      {% endif %}
                     </ul>
                 </nav>
             </div>
