--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -139,9 +139,9 @@
             <div class="px-3 md:px-0">
               <h3 class="font-bold text-gray-900">About</h3>
               <p class="py-4">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel mi ut felis tempus commodo nec id erat. Suspendisse consectetur dapibus velit ut lacinia.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel mi ut felis tempus commodo nec id erat. Suspendisse consectetur dapibus velit ut lacinia. <br>
+                Location : <span id="location">Loading....</span>
               </p>
-            </div>
           </div>
           <div class="flex w-full lg:w-1/2 lg:justify-end lg:text-right mt-6 md:mt-0">
             <div class="px-3 md:px-0">
@@ -174,6 +174,7 @@
         </div>
       </div>
     </footer>
+    <script src="{% static 'js/location.js' %}"></script>
   </body>
     
 </html>
